fixing height on mobile

--- a/src/Styling/Painting.css
+++ b/src/Styling/Painting.css
@@ -616,7 +616,7 @@ button:disabled {
 @media screen and (max-width:678px) {
     .column{
         flex:0 0;
-        height: 90vh;
+        height: 60vh;
     }
 
     .video-column{
